--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,7 @@ fieldset {
     text-align: center;
     justify-content: center;
     border-radius: 35px 35px 0 0;
+    border: 2px solid rgba(255,255,0,0.2);
     display: none;
     z-index: 100;
 }
@@ -560,5 +561,9 @@ footer .credit a:hover {
     }
     .followMe {
       display: flex;
+    }
+    .bottom-nav {
+      border-radius: 0 0 50px 50px;
+      border: 2.5px solid rgba(255,255,0,0.3);
     }
 }
