--- a/css/styles.css
+++ b/css/styles.css
@@ -564,20 +564,25 @@ strong {
 
 table {
     width: 100%;
-    border-collapse: collapse;
+    overflow: hidden;
+    border: 4px solid rgba(2,5,0,0.6);
+    border-radius: 20px;
+    padding:4px;
+    background-color: #101010;
 }
 
 th, td {
-    border: 1px solid ;
-    border-color: #BD2DC2;
+  border: 1px solid;
+  border-color: rgba(240,20,66,0.5);
     color: #ff0;
     padding: 0.5rem;
     text-align: left;
 }
 
 th {
+  
     background-color: #0A0A0A;
-    color: var(--primary);
+    color: #0ff ;
 }
 
 /* Checkbox styles */
